fix cart layout bugs

--- a/src/components/Checkout/style.scss
+++ b/src/components/Checkout/style.scss
@@ -1,6 +1,6 @@
 .checkout-container{
-    position: relative;
-    top: 74%;
+    position: absolute;
+    width: 271px;
     display: flex;
     flex-direction: column;
     padding: 0.8em;
